<?xml version="1.0"?>
<package format="3">
  <name>robosense_driver</name>
  <version>0.1.0</version>
  <description>
    RoboSense E1/E1R LiDAR ROS 2 driver wrapper with:
    - rsview (PointCloud2 publisher)
    - bale_estimator (bale detection in base_link)
  </description>

  <maintainer email="243040459@hdu.edu.cn">Xinye</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_msgs</depend>	  
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>stack_msgs</depend>

  <!-- System dependencies (via rosdep) -->
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all-dev</exec_depend>
  <build_depend>libpcap-dev</build_depend>
  <exec_depend>libpcap-dev</exec_depend>

  <!-- Optional: RViz used by launch files -->
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
